--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -48,7 +48,7 @@ body {
   display: none;
 }
 /* index, login info, top right */
-.navbar__login {
+.navbar .login {
   margin: 13px 0;
   color: #777;
 }
@@ -94,6 +94,34 @@ select.ng-invalid.ng-dirty {
   box-shadow: 0 0 8px #5f021f;
   transition: none;
 }
+.request-form {
+  margin-bottom: 30px;
+}
+.add-person-button {
+  margin-bottom: 20px;
+}
+.remove-competitor-btn {
+  padding: 5px 8px 3px;
+}
+/* zeroing margin because 
+   top button is hidden */
+#add-competitor-person-0 {
+  margin-top: 0;
+}
+/* hiding first persons remove button on load
+   (at least one person per request required) */
+#remove-person-person-0 {
+  display: none;
+}
+/* hiding remove-competitor-0 button of each person
+   (at least one competitor per person required) */
+.remove-competitor-competitor-0 {
+  display: none;
+}
+.single-competitor {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 15px;
+}
 /* Footer */
 /*========*/
 .footer {
@@ -102,14 +130,6 @@ select.ng-invalid.ng-dirty {
   width: 100%;
   height: 60px;
   background-color: #f5f5f5;
-}
-/*     Hidden form field   */
-/*=========================*/
-input[id*="DELETE"] {
-  display: none;
-}
-label[for*="DELETE"] {
-  display: none;
 }
 /*    Tables         */
 /*===================*/
