minor fix in reg form

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -10,7 +10,10 @@
 							<h1 class="gray">Техническая заявка на участие в соревнованиях по плаванию</h1><br>
 							<p class="lead">Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
 						основную и при необходимости дополнительную дистанцию, а также предварительное время.</p>
-							<p class="aside"><i>Все поля, кроме специально отмеченных, обязательны для заполнения.</i></p>
+							<p class="aside"><i>Все поля, кроме специально отмеченных, обязательны для заполнения.<br>
+							Не забудьте указать предварительное время (в секундах).<br>
+							Не более двух заплывов на одного участника.
+							Первым указывается основной заплыв ("на медаль").</i></p>
 					</div>
 			</div>
 				</div>
