--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -10,10 +10,7 @@
 							<h1 class="gray">Техническая заявка на участие в соревнованиях по плаванию</h1><br>
 							<p class="lead">Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
 						основную и при необходимости дополнительную дистанцию, а также предварительное время.</p>
-							<p class="aside"><i>Все поля, кроме специально отмеченных, обязательны для заполнения.<br>
-							Не забудьте указать предварительное время (в секундах).<br>
-							Не более двух заплывов на одного участника.
-							Первым указывается основной заплыв ("на медаль").</i></p>
+							<p class="aside"><i>Все поля, кроме специально отмеченных, обязательны для заполнения.</i></p>
 					</div>
 			</div>
 				</div>
@@ -62,8 +59,11 @@
 				<div class="well row">
 					<div class="col-md-7">
 						<h3 class="gray">Участники</h3><br>
-						<p>Если заявка командная, добавьте участников команды, если индивидуальная - то только себя.
-						Первая указанная дистанция идёт в зачёт. Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
+						<p>Если заявка командная, добавьте участников команды, если индивидуальная - то только себя.<br>
+						Первая указанная дистанция идёт в зачёт ("на медаль").
+                            Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
+                            <br>
+							Не забудьте указать предварительное время (в секундах).<br>
 							</p>
 						</div>
 					</div> <!-- End of well -->
