minor fix in reg form 3

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -59,11 +59,10 @@
 				<div class="well row">
 					<div class="col-md-7">
 						<h3 class="gray">Участники</h3><br>
-						<p>Если заявка командная, добавьте участников команды, если индивидуальная - то только себя.<br>
-						Первая указанная дистанция идёт в зачёт ("на медаль").
-                            Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
-                            <br>
-							Не забудьте указать предварительное время (в секундах).<br>
+						<p><li>Если заявка командная, добавьте участников команды, если индивидуальная - то только себя.</li>
+						<li>Первая указанная дистанция идёт в зачёт ("на медаль").</li>
+                            <li>Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.</li>
+							<li>Не забудьте указать предварительное время (в секундах). Используйте <b>точку</b> в качестве разделителя целых и сотых.</li>
 							</p>
 						</div>
 					</div> <!-- End of well -->
