--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -52,6 +52,7 @@
 	<!-- Additional JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 	<script src="{% static 'js/validation-app.js' %}"></script>
+	<script src="{% static 'js/notie.js' %}"></script>
 
 </body>
 </html>
