--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -259,7 +259,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6 col-centered">
 
-							<button type="submit" class="btn btn-success btn-xxl" ng-disabled="requestForm.$invalid || personsForm.$invalid">Отправить заявку</button>
+							<button type="submit" class="btn btn-success btn-xxl" ng-disabled="requestForm.$invalid || personsForm.$invalid" ng-click="submitRequest()">Отправить заявку</button>
 
 								<!--
 									<script src="{% static 'js/notie.js' %}"></script>
