--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -43,9 +43,8 @@
 					<div class="form-group">
 						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="competition">Соревнования:</label>
 						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-							<select class="form-control" name="competition" ng-model="form.competition" required>
-								<option value="" selected="selected">Выберите соревнование из списка:</option>
-								<option value="2">Брюквота</option>
+							<select class="form-control" name="competition" ng-model="form.competition" ng-selected="form.competition == competition.id" ng-options="competition.name for competition in fetchedData.data track by competition.id" ng-change="filterCompetition()" required>
+								<option value="" disabled selected>Выберите соревнование из списка:</option>
 							</select>
 							<p class="error-block" ng-show="requestForm.competition.$dirty && requestForm.competition.$invalid">Выберите соревнование</p>
 						</div>
@@ -145,9 +144,10 @@
 							<div class="form-group row">
 								<label class="col-lg-4 col-md-4 col-sm-4 col-xs-12 control-label text-left" for="birth_year">Год рождения:</label>
 								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-									<select class="form-control" name="birth_year" ng-model="person.birth_year" ng-options="year for year in years" required>
+									<select class="form-control" name="birth_year" ng-model="person.birth_year" ng-options="year for year in years" ng-change="" required>
+										<option value="" disabled selected>Выберите год:</option>
 									</select>
-									<!--<p class="error-block" ng-show="personForm.birth_year.$dirty && personForm.birth_year.$error.required">Это обязательное поле</p>-->
+									<p class="error-block" ng-show="personForm.birth_year.$dirty && personForm.birth_year.$error.required">Это обязательное поле</p>
 								</div>
 							</div> <!-- End of Birth year -->
 
@@ -155,7 +155,8 @@
 							<div class="form-group row">
 								<label class="col-lg-4 col-md-4 col-sm-4 col-xs-12 control-label text-left" for="gender">Пол:</label>
 								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-									<select class="form-control" name="gender" ng-model="person.gender" required>
+									<select class="form-control" name="gender" ng-model="person.gender" ng-change="filterToursByGender($index)" required>
+										<option value="" disabled selected>Выберите пол:</option>
 										<option value="М">мужской</option>
 										<option value="Ж">женский</option>
 									</select>
@@ -189,9 +190,8 @@
 
 											<div class="col-md-10">
 
-												<select class="form-control" name="tour" ng-model="competitor.tour" required>
-													<option value="" selected="selected">Выберите тур из списка:</option>
-													<option value="example_tour">Example Tour</option>
+												<select class="form-control" name="tour" ng-model="competitor.tour" ng-options="tour.name disable when tourDisabled() for tour in (tours | filter: { gender: person.gender } | filter: filterToursByAge(person.birth_year) ) track by tour.id" required>
+													<option value="" selected disabled>Выберите тур:</option>
 												</select>
 
 												<p class="error-block" ng-show="competitorForm.tour.$dirty && competitorForm.tour.$error.required">Выберите тур из списка</p>
@@ -254,18 +254,15 @@
 
 			<!-- Jumbotron -->
 			<div class="jumbotron">
-
 				<div class="container">
+					<div class="row">
+						<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6 col-centered">
+							<button type="submit" class="btn btn-success btn-xxl" ng-disabled="requestForm.$invalid || personsForm.$invalid" ng-click="submitRequest()">Отправить заявку</button>
+						</div>
+					</div>
 
 					{$ form $}
 
-					<div class="row">
-						<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6 col-centered">
-
-							<button type="submit" class="btn btn-success btn-xxl" ng-disabled="requestForm.$invalid || personsForm.$invalid" ng-click="submitRequest()">Отправить заявку</button>
-
-						</div>
-					</div>
 				</div>
 			</div> <!-- End of jumbotron -->
 
