--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -34,7 +34,7 @@
 									</td>
 									<td class="column-result-wide">
 										{% if c.main_distance%}<span><b>{% endif %}
-											{{c.result_set.all.0.time}}
+											{{c.time}}
 										{% if c.main_distance%}</b></span>{% endif %}
 									</td>
 								</tr>
