--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -23,12 +23,11 @@
 					{{result_form.id}}
 
 					<tr>
-						<td class="column-lane text-center">{{result_form.instance.competitor.order_set.all.0.lane}}</td>
-						<td class="column-name">{{result_form.instance.competitor.person.first_name}} {{result_form.instance.competitor.person.last_name}}</td>
-						<td class="column-team">{{result_form.instance.competitor.userrequest.team}}</td>
-						<td class="column-age text-center">{{result_form.instance.competitor.age}}</td>
+						<td class="column-lane text-center">{{result_form.instance.lane}}</td>
+						<td class="column-name">{{result_form.instance.person.first_name}} {{result_form.instance.person.last_name}}</td>
+						<td class="column-team">{{result_form.instance.userrequest.team}}</td>
+						<td class="column-age text-center">{{result_form.instance.age}}</td>
 						<td class="column-result">{{result_form.time}}</td>
-						<td class="hidden-field">{{result_form.competitor}}</td>
 					</tr>
 
 				{% endfor %}
