--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -20,13 +20,13 @@
 
 		<table class="table table-striped table-hover table-bordered">
 			<tbody>
-			{% for result in results %}
+			{% for competitor in competitors %}
 
 				<tr>
-					<td class="column-name">{{result.competitor.person.first_name}} {{result.competitor.person.last_name}}</td>
-					<td class="column-team">{{result.competitor.userrequest.team.name}}</td>
-					<td class="column-age text-center">{{result.competitor.age}}</td>
-					<td class="column-time column-time-animation text-center">{{result.time}}</td>
+					<td class="column-name">{{competitor.person.first_name}} {{competitor.person.last_name}}</td>
+					<td class="column-team">{{competitor.userrequest.team.name}}</td>
+					<td class="column-age text-center">{{competitor.age}}</td>
+					<td class="column-time column-time-animation text-center">{{competitor.time}}</td>
 				</tr>
 
 			{% endfor %}
