judequinn.angularjs disable tour option if already selected elsewhere

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -12,9 +12,8 @@
 	<![endif]-->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS-->
 	<link href="{% static 'css/main.css' %}" rel="stylesheet"> <!-- Main CSS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>  <!-- jQuery core -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> <!-- jQuery core -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> <!-- Bootstrap JS -->
-	<!-- <script src="{% static 'js/main.js' %}"></script> Default JS -->
 
 </head>
 
@@ -50,9 +49,9 @@
 	</footer> <!-- End of Footer -->
 
 	<!-- Additional JS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-	<script src="{% static 'js/validation-app.js' %}"></script>
-	<script src="{% static 'js/notie.js' %}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> <!-- AngularJS -->
+	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
+	<script src="{% static 'js/notie.js' %}"></script> <!-- Notie -->
 
 </body>
 </html>
