judequinn.angularjs removed main.js, added mask to phone input field

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -52,6 +52,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> <!-- AngularJS -->
 	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
 	<script src="{% static 'js/notie.js' %}"></script> <!-- Notie -->
+	<script src="{% static 'js/jquery.maskedinput.min.js' %}"></script>
+	<script src="{% static 'js/angular-jquery-maskedinput.js' %}"></script>
 
 </body>
 </html>
