judequinn.angularjs added reg_request controller

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -50,6 +50,7 @@
 
 	<!-- Additional JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> <!-- AngularJS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js"></script> <!-- angular-cookies -->
 	<script src="{% static 'js/notie.js' %}"></script> <!-- Notie -->
 	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
 
