judequinn.angularjs started new app

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -53,6 +53,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js"></script> <!-- angular-cookies -->
 	<script src="{% static 'js/notie.js' %}"></script> <!-- Notie -->
 	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
+	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
 
 </body>
 </html>
